# MemSearcher

./: .gitignore  README.md  eval.sh  launch_server.sh  model_merge.sh  pyproject.toml  requirements.txt  train.sh
data/: add_env.py  convert2parquet.py  merge_parquet.py  prepare_musique_recall.py  prepare_train_data.py  read_parquet.py
flashrag/dataset/: dataset.py
flashrag/pipeline/: __init__.py  active_pipeline.py
memsearcher/: __init__.py
memsearcher/inference/: memsearcher.py
recurrent/: generation_manager.py  interface.py  utils.py
recurrent/impls/: memory.py
scripts/evaluation/: eval_config.yaml  run_eval.py
scripts/inference/: re_call_use_case.py
scripts/serving/: download_corpus.sh  retriever_config.yaml
scripts/train/: train_multi_node.sh
verl/: protocol.py
verl/trainer/: main_ppo.py
verl/trainer/config/: ppo_trainer.yaml
verl/trainer/ppo/: ray_trainer.py
verl/utils/dataset/: rl_dataset.py  template.py
verl/utils/reward_score/: re_call.py
verl/workers/rollout/vllm_rollout/: test_get_position_ids.py  vllm_rollout_spmd.py
verl/workers/sharding_manager/: fsdp_vllm.py
